--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -2,7 +2,7 @@ html,
 body {
     font-family: Lato, sans-serif;
     color: #424551;
-
+    line-height: 160%;
 }
 
 .wrapper {
@@ -14,12 +14,8 @@ body {
 .container {
     max-width: 1260px;
     padding: 0 15px;
-    /* чтобы контент не прилипал к границам вьюпорта слева и справа */
     margin: 0 auto;
-    /* авто отступ (сверух и снизу 0, по бокам авто, это центрирует контент */
     height: 100%;
-    /* контейнеру всегда можно быть на 100%
-своего родителя, где бы мы его не задали*/
 }
 
 .button {
@@ -60,7 +56,27 @@ body {
 }
 
 
+.logo {}
 
+.heading {
+    color: #1E212C;
+}
+
+.heading__subtitle {
+    font-weight: 700;
+    line-height: 150%;
+    /* 24px */
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+}
+
+.heading__title {
+    font-size: 46px;
+    font-weight: 900;
+    line-height: 130%;
+    /* 59.8px */
+}
 
 /* --------------Общие элементы сверху-------------------------------------*/
 .header {
@@ -160,7 +176,7 @@ body {
     display: block;
 }
 
-/* ---------hower top------------------------------------ */
+/* ---------wower top------------------------------------ */
 .header__body {
     flex-grow: 1;
 }
@@ -177,6 +193,7 @@ body {
     align-items: center;
     color: #1e212c;
     margin: auto 0;
+
 
 }
 
@@ -257,26 +274,27 @@ body {
     margin-right: 12px;
 }
 
-/* ---------------------end header----------------------------- */
+/* ---------------------end main----------------------------- */
+.about {
+    padding-top: 160px;
 
-
-.about__section {
-    display: flex;
-    color: #1e212c;
-    padding-top: 179px;
-    flex-wrap: wrap;
-    margin-bottom: 179px;
-    position: relative;
-    justify-content: space-between;
 }
 
 
-.about__section::before {
-    content: '';
+.about__createx {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-bottom: 180px;
+    position: relative;
+}
+
+.about__createx::before {
+    content: "";
     position: absolute;
-    top: -90px;
-    right: -153px;
-    background: url("../images/decor/1.svg");
+    top: -30px;
+    right: -148px;
+    background: url(../images/decor/1.svg);
     width: 100px;
     height: 85px;
 }
@@ -284,216 +302,146 @@ body {
 
 
 
-.about__content-btn {
+.about__createx-content {
+    max-width: 600px;
+    margin-right: 30px;
+}
+
+.about__heading {
+    margin-bottom: 48px;
+}
+
+.about__text {
+    margin-bottom: 60px;
+}
+
+.about__paragraph {
+    margin-bottom: 24px;
+}
+
+.about__paragraph:last-child {
+    margin-bottom: 0;
+}
+
+.about__paragraph--accent {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 150%;
+    /* 30px */
+    color: #1e212c;
+
+}
+
+.about__btn-box {
+    display: flex;
+}
+
+.about__btn {
     margin-right: 24px;
 }
 
-.about__content-btn:last-child {
-    margin-right: 0px;
-}
-
-
-.about__img {
-    width: 465px;
-    height: 400px;
-
-}
-
-
-
-.about__title {
-
-    font-weight: 700;
-    line-height: 150%;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
-.about__title-2 {
-    font-size: 46px;
-    font-weight: 900;
-    line-height: 130%;
-    letter-spacing: 1px;
-    max-width: 500px;
-    margin-bottom: 30px;
-}
-
-
-.about__title-3 {
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 150%;
-    max-width: 600px;
-    margin-bottom: 20px;
-}
-
-
-
-
-
-
-
-
-.about__content p {
-    font-weight: 400;
-    line-height: 160%;
-    max-width: 600px;
-    margin-bottom: 50px;
-
-}
-
-
-
-.about__img-2 {
-    width: 100%;
-}
-
-
-
-.about__section-2 {
-    display: flex;
-    justify-content: space-between;
-}
-
-
-.about__content-2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.about__list {
-    display: flex;
-    flex-direction: column;
-    color: #1e212c;
-}
-
-.about__list li {
-    display: flex;
-    align-items: center;
-    color: var(--gray-900, #1E212C);
-    /* large/bold */
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 150%;
-    /* 27px */
-}
-
-
-.about__list span {
-    font-size: 48px;
-    font-weight: 900;
-    line-height: 130%;
-    letter-spacing: 1px;
-    color: #FF3F3A;
-    margin-right: 16px;
-}
-
-/* --------------end about us --------------------------- */
-
-.courses__titles {
-    color: #1E212C;
-    text-align: center;
-    padding-top: 161px;
-
-}
-
-
-
-
-
-.courses__subtitle {
-    font-weight: 700;
-    line-height: 150%;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
-
-.courses__title {
-    position: relative;
-
-    font-size: 46px;
-    font-weight: 900;
-    line-height: 130%;
-    letter-spacing: 1px;
-}
-
-
-
-
-.courses__title::before {
-    content: "";
-    position: absolute;
-    top: -50px;
-    left: -200px;
-    width: 136px;
-    height: 115px;
-    background: url("../images/decor/2.svg") no-repeat;
-
-}
-
-
-.courses__nav {
-    display: flex;
-}
-
-
-
-
-
-.courses__item {
-    display: inline-flex;
-    padding-top: 90px;
-}
-
-
-.courses__nav-btn {
-    display: inline-block;
-    margin-right: 61px;
-    border: 1px solid;
-    background-color: white;
-    border-color: #000000;
-    border-radius: 5px;
-    padding: 1px 8px;
-    font-weight: 700;
-    line-height: 160%;
-    height: 26px;
-    user-select: none;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-}
-
-.courses__item li:last-child {
+.about__btn:last-child {
     margin-right: 0;
 }
 
-.courses__nav-btn:hover {
-    background: linear-gradient(56deg, #FF3F3A 0%, #F75E05 100%)
+.about__values {
+    display: flex;
+    justify-content: space-between;
+
 }
 
 
-.course__cards {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    padding-top: 57px;
+.about__numbers {
+    margin-left: 30px;
+    align-self: center;
+}
+
+.about__number {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.about__number:last-child {
+    margin-bottom: 0;
+    `
+}
+
+.about__number span {
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 130%;
+    /* 62.4px */
+    letter-spacing: 1px;
+    color: var(--primary, #FF3F3A);
+    margin-right: 16px;
+}
 
 
+
+
+.about__image-box img {
+    border-radius: 4px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+/* ---------------------end avout----------------------------- */
+
+
+
+.directions__heading {
+    margin-bottom: 90px;
+}
+
+
+.heading--text-center {
+    text-align: center;
+    padding-top: 161px;
+    position: relative;
+
+}
+
+.heading--text-center::before{
+content: "";
+display: block;
+position: absolute;
+background: url("../images/decor/2.svg") no-repeat;
+top: 125px;
+left: -220px;
+width: 136px;
+height: 115px;
+
+}
+
+.heading--text-center:after{
+    content: "";
+    display: block;
+    position: absolute;
+    background: url("../images/decor/3.svg") no-repeat;
+    top: 550px;
+    right: -450px;
+    width: 242px;
+    height: 242px;
     
 }
 
-.course__cards img {
-    margin-bottom: 24px;
 
 
+.directions__filter-box {
+    display: flex;
+    margin-bottom: 56px;
+
+}
+
+.directions__filter-item {
+    margin-right: 45px;
+}
+
+.directions__filter-item:last-child {
+    margin-right: 0;
 }
 
 
@@ -501,188 +449,160 @@ body {
 
 
 
-.course__cards-item-1,
-.course__cards-item-2,
-.course__cards-item-3 {
-
-    margin-bottom: 30px;
-}
-
-
-.course__cards-item-1,
-.course__cards-item-2,
-.course__cards-item-5,
-.course__cards-item-4 {
-    margin-right: 30px;
-
-}
-
-
-
-
-
-.course__cards button {
-
-
-    display: inline-block;
+.directions__filter-btn {
+    background: transparent;
+    color: #9A9CA5;
     border-radius: 4px;
-    padding: 1px 8px;
+    border: 1px solid var(--gray-600, #9A9CA5);
     font-weight: 700;
-    line-height: 160%;
-    user-select: none;
-     -webkit-user-select: none;
-    -moz-user-select: none;
+    padding: 5px 7px;
+    font-size: 16px;
+    line-height: 1;
+
 }
 
+.directions__filter-btn--active {
 
-.course__cards-item-1 button {
-    background-color: #03CEA4;
+    border: none;
+    background: var(--btn-gradient, linear-gradient(56deg, #FF3F3A 0%, #F75E05 100%));
     color: white;
+    padding: 6px 8px;
 }
 
-.course__cards-item-2 button {
-    background-color: #5A87FC;
+.directions__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 30px;
+}
+
+
+.directions__list-item--marketing .directions__link-tag {
+    background: #03CEA4;
+}
+
+.directions__list-item--management .directions__link-tag{
+    background: #5A87FC;
+}
+
+.directions__list-item--hr .directions__link-tag{
+    background: #F89828;
+}
+
+.directions__list-item--design .directions__link-tag{
+ background: #F52F6E;
+}
+
+
+.directions__list-item--development .directions__link-tag {
+ background: #7772F1;
+}
+
+
+.directions__list-link {
+    display: block;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: all 1s;
+}
+
+
+.directions__list-link:hover {
+    box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
+    transition: all 0.3s;
+
+}
+
+
+.directions__list-link:hover .directions__link-btn {
+    color: #FF3F3A;
+    transition: all 1s;
+
+}
+
+
+.directions__list-link--active {}
+
+.directions__image-box img {
+    width: 100%;
+    height: 100%;
+}
+
+.directions__link-content {
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+
+
+    border: 1px solid var(--gray-300, #E5E8ED);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+
+}
+
+.directions__link-tag {
+    font-weight: 700;
     color: white;
-}
-
-.course__cards-item-3 button {
-    background-color: #F89828;
-    color: white;
-}
-
-.course__cards-item-4 button {
-    background-color: #F52F6E;
-    color: white;
-}
-
-.course__cards-item-5 button {
-    background-color: #7772F1;
-    color: white;
-}
-
-
-.course__cards-inner {
-    padding-left: 32px;
-    padding-bottom: 24px;
+    line-height: 1;
+    background-color: #9A9CA5;
+    padding: 6px 8px;
+    border-radius: 4px;
+    align-self: flex-start;
+    margin-bottom: 21px;
 
 }
 
 
-.course__cards-text {
-    padding-top: 21px;
-    width: 342px;
+
+.directions__link-text {
+    margin-bottom: 20px;
     color: var(--gray-700, #787A80);
     font-weight: 400;
     line-height: 160%;
+    /* 25.6px */
+}
+
+
+
+.directions__link-btn:hover .directions__link-text {
+    color: var(--gray-700, #787A80);
     margin-bottom: 20px;
-
 }
 
-.course__cards-link {
+.directions__link-btn {
+    color: var(--gray-900, #1E212C);
+    display: flex;
     font-weight: 700;
-    line-height: 160%;
-    position: relative;
+    transition: all 1s;
+
 }
 
-.course__cards-link:hover {
-    color: #FF3F3A;
-}
-
-.course__cards-link::before {
+.directions__link-btn::after {
     content: "";
-    position: absolute;
-    top: 0px;
-    right: -35px;
+    display: block;
     width: 24px;
     height: 24px;
-    background: url("../images/icons/arrow-right.svg") no-repeat;
-
+    background: url("../images/icons/arrow-right.svg") 0 2px / 100% no-repeat;
+    margin-left: 11px;
 }
 
-
-
-.course__cards-item-6 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.directions__list-item--empty {
+    background: #F4F5F6;
     text-align: center;
-    background-color: #F4F5F6;
-
-}
-
-.course__last-card-text {
-
     font-size: 20px;
     font-weight: 700;
     line-height: 150%;
-    width: 242px;
-    height: 60px;
-}
-
-
-.cards:nth-child(n-5):hover {
-
-    box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
-}
-
-.cards{
-border-radius: 4px;
-border: 1px solid var(--gray-300, #E5E8ED);
-background: var(--white, #FFF);
-}
-.courses__sert-img {
-    width: 705px;
-    height: 500px;
-    /* transform: translateX(50px); */
-}
-
-
-.courses__sert {
-    padding-top: 178px;
+    /* 30px */
     display: flex;
-    align-items: start;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
 
 }
 
-
-
-.courses__sert-titles {
-    width: 392px;
-    color: #1E212C;
-}
-
-
-
-.courses__sert-subtitle {
-    font-weight: 700;
-    line-height: 150%;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
-
-.courses__sert-title {
-    font-size: 46px;
-    font-weight: 900;
-    line-height: 130%;
-    letter-spacing: 1px;
-    margin-top: 8px;
-}
-
-.courses__sert-text {
-    font-weight: 400;
-    line-height: 160%;
+.directions__list-item--empty span {
+    width: 240px;
     color: #424551;
-    padding-top: 48px;
-}
 
-
-.courses__sert-logos {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 32px;
 
 }
-
-
